fix overflow

--- a/physics/host.css
+++ b/physics/host.css
@@ -9,7 +9,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    overflow: hidden;
 }
 
 h1 {
